--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.zurich.mobile">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -10,7 +14,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.zurich.mobile.activity.SplashActivity"
+        <activity android:name=".activity.SplashActivity"
+            android:launchMode="singleInstance"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,11 +23,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.zurich.mobile.activity.MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
-                <action android:name="MainActivity"/>
+                <action android:name="main_page"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name=".activity.SplashActivity$DownLoadCompleteReceiver">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+
+            </intent-filter>
+
+        </receiver>
     </application>
 
 </manifest>
