--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile files('src/main/libs/viewpagerindicator_v1.0.2.jar')
 }
+
