--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,12 @@ android {
         versionName "1.0"
     }
 
+    sourceSets {
+        main {
+            aidl.srcDirs = ['src/main/java']
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -26,5 +32,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile files('src/main/libs/viewpagerindicator_v1.0.2.jar')
+    compile files('src/main/libs/zip4j_1.3.2.jar')
 }
 
