完善隐私保护、淘应用、通信卫士。启动页优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,8 @@ dependencies {
         transitive = true
     }
     compile 'com.android.support:design:23.3.0'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'org.mod4j.org.apache.commons:lang:2.1.0'
+    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 }
 
