增加个人中心，关于app等

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,12 @@
             android:name=".activity.CacheCleanActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AboutMeActivity"
+            android:theme="@style/Theme.DesignDemo"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
+
 
         <!-- Activity that allows the user to send new SMS/MMS messages -->
         <activity android:name=".activity.ComposeSmsActivity" >
